--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Nicole's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+      <style>
+    img {
+    height: 130px
+    }
+  </style>
 </head>
 <body>
     <table cellspacing="20">
